# Py_web_HW_08

./: README.md  client_rabbir.py  pyproject.toml  rabbitmq_test.py  test_mongodb.py  test_redis.py
1_mongoDB/: connect.py
2_mongo_db_rabbit_mq/: config.ini  models.py  producer.py  seed.py
mongoDB/: config.ini  connect.py  from dateutil.py  query.py  seeds.py
mongo_db_rabbit_mq/: consumer_sms.py  models.py
rabbit_mq/: config.ini  consumer.py  models.py  producer.py
test/: client_rabbir.py
test/mongoDB_test/: config.ini
