[tool.poetry]
name = "py-web-hw-08"
version = "0.1.0"
description = ""
authors = ["alex_kondr <alex_kondr@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "py_web_hw_08"}]

[tool.poetry.dependencies]
python = "^3.10"
reds = "^0.1.9"
pika = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
